This is all about creating Nodes and accessing them using js

--- a/DOM/style.css
+++ b/DOM/style.css
@@ -1,6 +1,6 @@
 #container {
   color: white;
-  background-color: rgb(38, 223, 38);
+  /* background-color: rgb(38, 223, 38); */
   padding: 10px;
   border-radius: 5px;
 }
